# TimingDiagram

./: README.md  TimingDiagram.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
