name:                TimingDiagram
version:             0.1.0.0
synopsis:            Generates the timing diagram in TikZ for the last question
                     of CSE 141 hw2
description:         Please see README.md
homepage:            https://github.com/githubuser/TimingDiagram#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-pgf >= 0.1.0.3
  default-language:    Haskell2010

executable TimingDiagram-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TimingDiagram
  default-language:    Haskell2010

test-suite TimingDiagram-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TimingDiagram
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TimingDiagram
